javascript developer converted to fullstack developer

--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ enableEmoji = true
 author = "Giri Aakula"
 description = "Giri Aakula's personal website"
 keywords = "blog,developer,personal"
-info = ["Full Stack Javascript Developer"]
+info = ["Full Stack Developer"]
 avatarURL = "images/avatar.jpeg"
 #gravatar = "me@giriaakula.com"
 footerContent = ""
