--- a/config.toml
+++ b/config.toml
@@ -24,6 +24,10 @@ hideFooter = false
 hideCredits = false
 hideCopyright = false
 since = 2021
+favicon_32 = "images/favicon/favicon-32x32.png"
+favicon_16 = "images/favicon/favicon-16x16.png"
+touchicon = "images/favicon/apple-touch-icon.png"
+
 # Git Commit in Footer, uncomment the line below to enable it
 commit = "https://github.com/luizdepra/hugo-coder/tree/"
 # Right To Left, shift content direction for languagues such as Arabic
