completed videojs text overlay article

--- a/config.toml
+++ b/config.toml
@@ -194,3 +194,7 @@ url = "contact/"
 # name = "Contato"
 # weight = 5
 # url = "contact/"
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
